--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
         <h1 class="hero-title">Effective Solutions
           for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="hero-button" type="button" data-modal-open>Order Service</button>
       </div>
     </section>
     <!-- section 1 -->
@@ -402,15 +402,16 @@
     </div>
   </footer>
   <!-- modal window -->
-  <div class="backdrop">
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button class="modal-btn" type="button">
-        <svg class="modal-icon" width="" height="">
-          <use href=""></use>
+      <button class="modal-btn" type="button" data-modal-close>
+        <svg class="modal-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
         </svg>
       </button>
     </div>
   </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
