--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How1/img01.jpg" alt="Banking App Interface Concept" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App </p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App </p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Banking App Interface Concept</h2>
@@ -87,9 +89,12 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How1/img02.jpg" alt="Cashless Payment" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Cashless Payment</h2>
@@ -101,9 +106,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How1/img03.jpg" alt="Meditation App" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Meditation App</h2>
@@ -115,9 +122,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How2/img04.jpg" alt="Taxi Service" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Taxi Service</h2>
@@ -129,9 +138,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How2/img05.jpg" alt="Screen Illustrations" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Screen Illustrations</h2>
@@ -143,9 +154,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How2/img06.jpg" alt="Online Courses" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Online Courses</h2>
@@ -157,9 +170,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How3/img07.jpg" alt="Instagram Stories Concept" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Instagram Stories Concept</h2>
@@ -171,9 +186,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How3/img08.jpg" alt="Organic Food" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Organic Food</h2>
@@ -185,9 +202,11 @@
             <a class="portfolio-link link" href="">
               <div class="portfolio-block">
                 <img src="./images/How3/img09.jpg" alt="Fresh Coffee" width="360" height="300" />
-                <p class="paragraf-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="overlay">
+                  <p class="paragraf-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                    Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-type">Fresh Coffee</h2>
